# Pet-Analytics

./: .env.example  .gitignore  README.ad  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
app/: app.py
app/controllers/: base_controller.py  food_controller.py
app/core/: config.py  deps.py
app/models/: food.py
app/models/food/: __init__.py
app/models/food/responses/: get_food_response.py
app/models/http/food/: __init__.py
app/models/http/food/requests/: create_food_entry_payload.py
app/models/http/food/responses/: create_food_entry_response.py
app/models/schemas/food/: food_fields.py  food_schema.py  food_tags.py
app/repository/: food_repository.py
app/repository/impl/: food_repository_impl.py
app/services/: food_service.py
app/services/impl/: food_service_impl.py
app/utils/: influx_client.py
docs/: architecture.ad  install.ad
grafana-provisioning/datasources/: datasource.yml
